chore(server): routine fixes

--- a/src/Warehouse.Server/appsettings.json
+++ b/src/Warehouse.Server/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Databases": {
+    "Postgres": {
+      "ConnectionString": "Host=localhost;Port=5433;Database=WarehouseDB;Username=postgres;Password=postgres;Include Error Detail=true"
     }
   },
+  "UsedDatabase": "Postgres",
   "AllowedHosts": "*"
 }
