--- a/.gitignore
+++ b/.gitignore
@@ -363,4 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 src/linux-arm64/
 linux-arm64/
-/src/ServerStation.Server/wwwroot
+/src/Warehouse.Server/wwwroot
