fix(server): rollback some changes

--- a/src/Warehouse.Server/Warehouse.Server.csproj
+++ b/src/Warehouse.Server/Warehouse.Server.csproj
@@ -23,4 +23,8 @@
 	  <ProjectReference Include="..\Warehouse.WebApi\Warehouse.WebApi.csproj" />
 	</ItemGroup>
 
+  <Target Name="PublishClient" AfterTargets="Build">
+    <Exec Command="dotnet publish &quot;..\Warehouse.Client\Warehouse.Client.csproj&quot; -c Release -o &quot;$(ProjectDir)wwwroot&quot;" />
+  </Target>
+
 </Project>
