--- a/src/Warehouse.BusinessLogic/Warehouse.BusinessLogic.csproj
+++ b/src/Warehouse.BusinessLogic/Warehouse.BusinessLogic.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.19" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 	</ItemGroup>
 
